<resources>
    <string name="app_name">Copy Master</string>
    <string name="str_easy_copy_is_active">Copy Master is active!</string>
    <string name="str_never_miss_content">Never miss a copied content anymore!</string>
    <string name="str_no_clips_found">No clips found</string>
    <string name="str_turn_on">Turn on Copy Master to get copied clips here</string>
    <string name="str_app_name">Copy Master</string>
    <string name="str_keep_this_button_active">Keep this switch active</string>
    <string name="str_total">Total</string>
    <string name="str_offensive">Offensive</string>
    <string name="str_links">Links</string>
    <string name="str_unsafe_links">Unsafe Links</string>
    <string name="str_delete_all">Delete All</string>
    <string name="str_copy_message">It\'s so lonely here. You turn the above switch ON and start copying content.</string>
    <string name="str_do_you_really_want_to_delete_all">Do you really want to delete all?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_type_your_search_query">Type your search query</string>
    <string name="str_easy_copy">Copy Master</string>
    <string name="str_important_clips">Important Clips</string>
    <string name="str_about">About</string>
    <string name="str_about_app">The main intention of this app is to make sure that you don\'t miss any data copied to the clipboard as the clipboard data is constantly overwritten by new copied content. Additionally, when you want to take important notes or copy an important url online, all you have to do is just copy the content; this app automatically saves and organizes them for you, reducing your effort on manual copy-paste headache.</string>
    <string name="str_developed_by">Developed by</string>
    <string name="str_logo_by">Logo by</string>
    <string name="str_libraries"><![CDATA[Language & Libraries]]></string>
    <string name="str_designer_name">Mohamed Irfan</string>
    <string name="str_lib">Kotlin, Realm DB, Livedata, Foreground Service</string>
    <string name="str_dev_name">Mustaq Sameer</string>
    <string name="str_license_details">Click here for license details</string>
    <string name="str_license_information">License Information</string>
    <string name="str_mustaq_sameer_2020">Mustaq Sameer Applications | 2020</string>
    <string name="str_designer_mail">irfanofficialzx@gmail.com</string>
    <string name="str_developer_mail">devmustaq@gmail.com</string>
    <string name="str_feedback">Feedback</string>
q    <string name="str_text_copied">Text Copied</string>
    <string name="str_share">Share the copied clip</string>
    <string name="str_press_again_exit">Press again to exit</string>
    <string name="str_service_active">Copy Master is Active</string>
    <string name="str_service_stopped">Copy Master is Stopped</string>
    <string name="str_guidance_message">Turn this switch ON to save the copied data into this app</string>
</resources>
